--- a/package.json
+++ b/package.json
@@ -10,14 +10,32 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.6.0",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-otp-entry": "^1.7.1",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "3.25.0",
+    "react-native-svg": "13.8.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
