--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "moment": "^2.30.1",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-calendar-picker": "^8.0.5",
     "react-native-otp-entry": "^1.7.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-raw-bottom-sheet": "^3.0.0",
