--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.30.1",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-alert-notification": "^0.4.2",
     "react-native-calendar-picker": "^8.0.5",
     "react-native-otp-entry": "^1.7.1",
     "react-native-phone-number-input": "^2.1.0",
