--- a/ios/medicore/Info.plist
+++ b/ios/medicore/Info.plist
@@ -65,5 +65,9 @@
 	<array>
 		<string>tel</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo library to upload images.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to take pictures.</string>
 </dict>
 </plist>
