--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.70.6",
     "react-native-alert-notification": "^0.4.2",
     "react-native-calendar-picker": "^8.0.5",
+    "react-native-image-picker": "^8.2.0",
     "react-native-otp-entry": "^1.7.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-raw-bottom-sheet": "^3.0.0",
