--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "3.25.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "13.8.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-timer-picker": "^2.1.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2"
   },
