--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-picker": "^8.2.0",
     "react-native-otp-entry": "^1.7.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-pure-jwt": "^3.0.3",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "3.25.0",
