--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "android-release": "react-native run-android --variant=release",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
